syntax = "proto3";

package auction_system;

option go_package = "proto/auction"; 

service AuctionService {
    //the client can bid on an item
    rpc Bid (BidRequest) returns (BidResponse) {}
    //the client can get the current highest bid alongside the highest bidder
    rpc Result (ResultRequest) returns (ResultResponse) {}
    //the client notiifes the end of the auction
    rpc EndAuction (Empty) returns (ResultResponse) {}
}

message BidRequest {
    int32 amount = 1;
    int32 BidderID = 2;
}

message BidResponse {
   Status status = 1;  
}

message ResultRequest {
    int32 clientId = 1;
}

message ResultResponse {
    int32 highestBidderId = 1;
    int32 highestBid = 2;
}   

enum Status {
    FAIL = 0;
    SUCCESS = 1;
    EXECPTION = 2;
}

message Empty {}